--- a/Assets/src/style.css
+++ b/Assets/src/style.css
@@ -4,5 +4,10 @@
 
 @font-face {
     font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+    src: url("../fonts/static/Roboto-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Roboto Bold";
+    src: url("../fonts/static/Roboto-Bold.ttf");
 }
